# perceiver-pytorch

./:  How to classify a rectangle in an image using a Perceiver  README.md  pyproject.toml  setup.py  train_cifar10.py
examples/: perceiver_detect_box.ipynb
perceiver_pytorch/: __init__.py  experimental.py  gated.py  mixed_latents.py  multi_perceiver_pytorch.py  perceiver_io.py  perceiver_pytorch.py  rotary.py
tests/: compare_params.py  test_perceiver.py
