[project]
name = "perceiver-pytorch"
version = "0.9.0"
description = "Perceiver - Pytorch"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    "artificial intelligence",
    "deep learning",
    "transformer",
    "attention mechanism"
]

classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]

dependencies = [
    "einops>=0.8.0",
    "torch>=2.5"
]

[project.urls]
Homepage = "https://pypi.org/project/perceiver-pytorch/"
Repository = "https://codeberg.org/lucidrains/perceiver-pytorch"

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "perceiver_pytorch",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["perceiver_pytorch"]
